// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scrollbar > custom value to unit 1`] = `
"/* layer: default */
.scrollbar-thumb-radius-2px{--scrollbar-thumb-radius:2px;}
.scrollbar-w-1{--scrollbar-width:2px;}"
`;

exports[`scrollbar > preset set prefix 1`] = `
"/* layer: default */
.un-scrollbar{--scrollbar-track:#f5f5f5;--scrollbar-thumb:#ddd;--scrollbar-width:8px;--scrollbar-height:8px;--scrollbar-track-radius:4px;--scrollbar-thumb-radius:4px;overflow:auto;}
.un-scrollbar::-webkit-scrollbar{width:var(--scrollbar-width);height:var(--scrollbar-height);}
.un-scrollbar::-webkit-scrollbar-thumb{background-color:var(--scrollbar-thumb);}
.un-scrollbar::-webkit-scrollbar-track{background-color:var(--scrollbar-track);}"
`;

exports[`scrollbar > presetUno prefix 1`] = `
"/* layer: shortcuts */
.scrollbar{--scrollbar-track:#f5f5f5;--scrollbar-thumb:#ddd;--scrollbar-width:8px;--scrollbar-height:8px;--scrollbar-track-radius:4px;--scrollbar-thumb-radius:4px;overflow:auto;}
.scrollbar::-webkit-scrollbar{width:var(--scrollbar-width);height:var(--scrollbar-height);}
.scrollbar::-webkit-scrollbar-thumb{background-color:var(--scrollbar-thumb);}
.scrollbar::-webkit-scrollbar-track{background-color:var(--scrollbar-track);}"
`;

exports[`scrollbar > scrollbar 1`] = `
"/* layer: shortcuts */
.scrollbar{--scrollbar-track:#f5f5f5;--scrollbar-thumb:#ddd;--scrollbar-width:8px;--scrollbar-height:8px;--scrollbar-track-radius:4px;--scrollbar-thumb-radius:4px;overflow:auto;}
.scrollbar::-webkit-scrollbar{width:var(--scrollbar-width);height:var(--scrollbar-height);}
.scrollbar::-webkit-scrollbar-thumb{background-color:var(--scrollbar-thumb);}
.scrollbar::-webkit-scrollbar-track{background-color:var(--scrollbar-track);}
.scrollbar-rounded::-webkit-scrollbar-thumb{border-radius:var(--scrollbar-thumb-radius);}
.scrollbar-rounded::-webkit-scrollbar-track{border-radius:var(--scrollbar-track-radius);}
/* layer: default */
.scrollbar-radius-2{--scrollbar-track-radius:0.5rem;--scrollbar-thumb-radius:0.5rem;}
.scrollbar-w-4px{--scrollbar-width:4px;}"
`;

exports[`scrollbar > scrollbar color 1`] = `
"/* layer: default */
.scrollbar-track-color-red{--un-scrollbar-track-opacity:1;--scrollbar-track:rgba(248,113,113,var(--un-scrollbar-track-opacity));}"
`;

exports[`scrollbar > scrollbar custom unit 1`] = `
"/* layer: default */
.scrollbar-w-1px{--scrollbar-width:1px;}"
`;

exports[`scrollbar > should work in atributify mode 1`] = `
"/* layer: shortcuts */
[scrollbar~=\\"\\\\~\\"]{--scrollbar-track:#f5f5f5;--scrollbar-thumb:#ddd;--scrollbar-width:8px;--scrollbar-height:8px;--scrollbar-track-radius:4px;--scrollbar-thumb-radius:4px;overflow:auto;}
[scrollbar~=\\"\\\\~\\"]::-webkit-scrollbar{width:var(--scrollbar-width);height:var(--scrollbar-height);}
[scrollbar~=\\"\\\\~\\"]::-webkit-scrollbar-thumb{background-color:var(--scrollbar-thumb);}
[scrollbar~=\\"\\\\~\\"]::-webkit-scrollbar-track{background-color:var(--scrollbar-track);}
[scrollbar~=\\"rounded\\"]::-webkit-scrollbar-thumb{border-radius:var(--scrollbar-thumb-radius);}
[scrollbar~=\\"rounded\\"]::-webkit-scrollbar-track{border-radius:var(--scrollbar-track-radius);}
/* layer: default */
.w-4px{width:4px;}
.rounded{border-radius:0.25rem;}
[scrollbar~=\\"radius-2\\"]{--scrollbar-track-radius:0.5rem;--scrollbar-thumb-radius:0.5rem;}
[scrollbar~=\\"w-4px\\"]{--scrollbar-width:4px;}"
`;

exports[`scrollbar > var prefix 1`] = `
"/* layer: shortcuts */
.scrollbar{--my-custom-prefix-scrollbar-track:#f5f5f5;--my-custom-prefix-scrollbar-thumb:#ddd;--my-custom-prefix-scrollbar-width:8px;--my-custom-prefix-scrollbar-height:8px;--my-custom-prefix-scrollbar-track-radius:4px;--my-custom-prefix-scrollbar-thumb-radius:4px;overflow:auto;}
.scrollbar::-webkit-scrollbar{width:var(--my-custom-prefix-scrollbar-width);height:var(--my-custom-prefix-scrollbar-height);}
.scrollbar::-webkit-scrollbar-thumb{background-color:var(--my-custom-prefix-scrollbar-thumb);}
.scrollbar::-webkit-scrollbar-track{background-color:var(--my-custom-prefix-scrollbar-track);}
.scrollbar-rounded::-webkit-scrollbar-thumb{border-radius:var(--my-custom-prefix-scrollbar-thumb-radius);}
.scrollbar-rounded::-webkit-scrollbar-track{border-radius:var(--my-custom-prefix-scrollbar-track-radius);}
/* layer: default */
.scrollbar-thumb-radius-2px{--my-custom-prefix-scrollbar-thumb-radius:2px;}
.scrollbar-w-1{--my-custom-prefix-scrollbar-width:0.25rem;}"
`;
